--- a/.emacs.d/l_init.org
+++ b/.emacs.d/l_init.org
@@ -400,6 +400,33 @@ Vterm ftw
     (setq vterm-copy-exclude-prompt t))
 #+END_SRC
 
+Make vterm behave like a guake terminal and open below the main
+window. This can be toggled and opens only one instance per window
+(afaik). Considering using [[https://github.com/jixiuf/vterm-toggle#vterm-toggle-use-dedicated-buffer][this feature]] to not provide a dedicated
+buffer to vterm so it sticks to the window it was launched with.
+
+#+begin_src emacs-lisp
+  (use-package vterm-toggle
+    :bind
+    (("C-M-'" . vterm-toggle-cd))
+    :config
+    ;; reset window layout after kill
+    (setq vterm-toggle-reset-window-configration-after-exit t)
+    ;; toggle behaviour - like a toggle keep it running
+    (setq vterm-toggle-hide-method nil)
+    ;; show vterm in a window at the bottom
+    (setq vterm-toggle-fullscreen-p nil)
+    (add-to-list 'display-buffer-alist
+             '((lambda(bufname _) (with-current-buffer bufname (equal major-mode 'vterm-mode)))
+                (display-buffer-reuse-window display-buffer-at-bottom)
+                ;;(display-buffer-reuse-window display-buffer-in-direction)
+                ;;display-buffer-in-direction/direction/dedicated is added in emacs27
+                ;;(direction . bottom)
+                ;;(dedicated . t) ;dedicated is supported in emacs27
+                (reusable-frames . visible)
+                (window-height . 0.3)))
+    )
+#+end_src
 
 ** Eshell configuration
 
