--- a/.emacs.d/l_init.org
+++ b/.emacs.d/l_init.org
@@ -14,7 +14,7 @@ Lexical binding is required for a lot of stuff here
 
   ;; don't follow symlinks? hopefully this solves the
   ;; `symbols function definition is void: org-file-name-concat' error
-  (setq vc-follow-symlinks nil)
+  (setq vc-follow-symlinks t)
 #+END_SRC
 
 
@@ -2005,35 +2005,52 @@ within Emacs
 
 #+BEGIN_SRC emacs-lisp
   (use-package modus-themes
-  :init
-  (setq modus-themes-bold-constructs t
-        modus-themes-italic-constructs t
-        modus-themes-region 'no-extend
-        modus-themes-mode-line '(borderless 2)
-        modus-themes-prompts '(italic background)
-        modus-themes-completions 'opinionated
-        modus-themes-hl-line 'accented
-        modus-themes-intense-markup t
-        modus-themes-region '(no-extend bg-only)
-        modus-themes-org-block 'gray-background)
+      :config
 
-  (setq modus-themes-headings
-        '((1 . (overline background semibold))
-          (2 . (overline background semibold))
-          (3 . (overline background semibold))
-          (4 . (background semibold))
-          (t . (regular))))
+      (setq modus-themes-bold-constructs t
+            modus-themes-italic-constructs t
+            modus-themes-region 'no-extend
+            modus-themes-mode-line '(2)
+            modus-themes-prompts '(backgound bold intense)
+            modus-themes-completions 'opinionated
+            modus-themes-hl-line 'accented
+            modus-themes-intense-markup t
+            modus-themes-region '(no-extend bg-only)
+            modus-themes-org-block 'gray-background)
 
-  ;; set semibold as the bold face
-  (set-face-attribute 'bold nil :weight 'semibold)
+      (defun peremacs/call-modus-operandi ()
+        (interactive)
+        ;; heading backgrounds work better here
+        (setq modus-themes-headings
+              '((1 . (overline background semibold 1.2))
+                (2 . (overline background semibold 1.1))
+                (3 . (overline background semibold))
+                (4 . (background semibold))
+                (t . (regular))))
+        (modus-themes-load-operandi))
 
-  ;; Load the theme files before enabling a theme
-  (modus-themes-load-themes)
-  :config
-  ;; Load the theme of your choice:
-  (modus-themes-load-operandi)
-  ;; (modus-themes-load-vivendi)
-  )
+      (defun peremacs/call-modus-vivendi ()
+        (interactive)
+        (setq modus-themes-headings
+              '((1 . (overline semibold 1.2))
+                (2 . (overline semibold 1.1))
+                (3 . (overline semibold))
+                (4 . (semibold))
+                (t . (regular))))
+        (modus-themes-load-vivendi))
+
+
+      ;; set semibold as the bold face
+      ;; (for those fonts that provide this face)
+      ;; (set-face-attribute 'bold nil :weight 'semibold)
+
+      ;; Load the theme files before enabling a theme
+      (modus-themes-load-themes)
+
+      ;; Load the theme of your choice:
+      ;; (peremacs/call-modus-operandi)
+      (peremacs/call-modus-vivendi)
+      )
 #+END_SRC
 
 
