--- a/.emacs.d/l_init.org
+++ b/.emacs.d/l_init.org
@@ -14,9 +14,16 @@ Lexical binding is required for a lot of stuff here
 
   ;; don't follow symlinks? hopefully this solves the
   ;; `symbols function definition is void: org-file-name-concat' error
-  (setq vc-follow-symlinks t)
+  (setq vc-follow-symlinks nil)
 #+END_SRC
 
+
+* Ensure UTF-8
+
+#+begin_src emacs-lisp
+  (set-language-environment "UTF-8")
+  ;; (prefer-coding-system "UTF-8")
+#+end_src
 
 * Native compilation setup
 
@@ -513,7 +520,8 @@ itself
 
 #+BEGIN_SRC emacs-lisp
   (use-package aggressive-indent
-    :config (global-aggressive-indent-mode 1))
+    :config (global-aggressive-indent-mode 1)
+    :diminish aggressive-indent-mode)
 #+END_SRC
 
 
@@ -2016,7 +2024,8 @@ within Emacs
             modus-themes-hl-line 'accented
             modus-themes-intense-markup t
             modus-themes-region '(no-extend bg-only)
-            modus-themes-org-block 'gray-background)
+            modus-themes-org-block 'gray-background
+            modus-themes-subtle-line-numbers t)
 
       (defun peremacs/call-modus-operandi ()
         (interactive)
