--- a/.emacs.d/l_init.org
+++ b/.emacs.d/l_init.org
@@ -2159,7 +2159,9 @@ modeline/. I still need to figure out how to use this properly.
                 "^\\*term.*\\*$"   term-mode
                 "^\\*vterm.*\\*$"  vterm-mode
               help-mode
-              compilation-mode))
+              compilation-mode
+              ;;magit stuff
+              magit-mode))
 
       ;;grouping popups by projectile groups
       (setq popper-group-function #'popper-group-by-projectile)
